--- a/MoreFlyout/FlyoutWindow.xaml
+++ b/MoreFlyout/FlyoutWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<windowex:WindowEx
-    x:Class="MoreFlyout.MainWindow"
+    x:Class="MoreFlyout.FlyoutWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,6 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:windowex="using:WinUIEx"
     IsAlwaysOnTop="True"
+    IsResizable="False"
     IsShownInSwitchers="False"
-    PersistenceId="MainWindow"
+    PersistenceId="FlyoutWindow"
     mc:Ignorable="d" />
+
