--- a/MoreFlyout/Views/MenuPage.xaml
+++ b/MoreFlyout/Views/MenuPage.xaml
@@ -4,20 +4,23 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Background="{ThemeResource SolidBackgroundFillColorBaseBrush}"
     mc:Ignorable="d">
 
-    <Page.ContextFlyout>
-        <MenuFlyout x:Name="ContextMenu" ShouldConstrainToRootBounds="False">
-            <MenuFlyoutItem x:Uid="MenuFlyoutItem_Project" x:Name="ProjectMenuFlyoutItem" Click="MenuFlyoutItem_Click">
-                <MenuFlyoutItem.Icon>
-                    <FontIcon Glyph="&#xE946;" />
-                </MenuFlyoutItem.Icon>
-            </MenuFlyoutItem>
-            <MenuFlyoutItem x:Uid="MenuFlyoutItem_Close" x:Name="CloseMenuFlyoutItem" Click="MenuFlyoutItem_Click">
-                <MenuFlyoutItem.Icon>
-                    <FontIcon Glyph="&#xE7E8;" />
-                </MenuFlyoutItem.Icon>
-            </MenuFlyoutItem>
-        </MenuFlyout>
-    </Page.ContextFlyout>
+    <Grid x:Name="ContentArea">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="48" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <TextBlock
+            Grid.Row="0"
+            x:Uid="Menu_Title"
+            Style="{StaticResource PageTitleStyle}" />
+
+        <Grid Grid.Row="1">
+            
+        </Grid>
+        
+    </Grid>
 </Page>
