Fix: Thanks to Simon Mourier's answer, the serious collapse of WinUI caused by CG recycling was successfully solved

--- a/MoreFlyout/Views/FlyoutPage.xaml
+++ b/MoreFlyout/Views/FlyoutPage.xaml
@@ -11,7 +11,11 @@
     </Page.Resources>
 
     <Page.ContextFlyout>
-        <Flyout x:Name="FlyoutWindowContextFlyout" ShouldConstrainToRootBounds="False">
+        <Flyout
+            x:Name="FlyoutPageContextFlyout"
+            AllowFocusOnInteraction="False"
+            ShouldConstrainToRootBounds="False"
+            ShowMode="Transient">
             <Flyout.SystemBackdrop>
                 <local:AcrylicSystemBackdrop />
             </Flyout.SystemBackdrop>
