--- a/MoreFlyout/Views/MenuPage.xaml
+++ b/MoreFlyout/Views/MenuPage.xaml
@@ -4,23 +4,37 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Background="{ThemeResource SolidBackgroundFillColorBaseBrush}"
     mc:Ignorable="d">
 
-    <Grid x:Name="ContentArea">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="48" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-
-        <TextBlock
-            Grid.Row="0"
-            x:Uid="Menu_Title"
-            Style="{StaticResource PageTitleStyle}" />
-
-        <Grid Grid.Row="1">
-            
-        </Grid>
-        
-    </Grid>
+    <Page.ContextFlyout>
+        <MenuFlyout>
+            <ToggleMenuFlyoutItem
+                x:Uid="MenuFlyoutItem_StartWithWindows"
+                x:Name="StartWithWindowsToggleMenuFlyoutItem"
+                Command="{x:Bind ViewModel.SwitchStartWithWindowsCommand}"
+                CommandParameter="{Binding IsChecked, ElementName=StartWithWindowsToggleMenuFlyoutItem}"
+                IsChecked="{x:Bind ViewModel.StartWithWindows,Mode=OneWay}">
+                <MenuFlyoutItem.Icon>
+                    <FontIcon Glyph="&#xE7F7;" />
+                </MenuFlyoutItem.Icon>
+            </ToggleMenuFlyoutItem>
+            <MenuFlyoutSeparator />
+            <MenuFlyoutItem
+                x:Name="ProjectMenuFlyoutItem"
+                x:Uid="MenuFlyoutItem_Project"
+                Click="MenuFlyoutItem_Click">
+                <MenuFlyoutItem.Icon>
+                    <FontIcon Glyph="&#xE946;" />
+                </MenuFlyoutItem.Icon>
+            </MenuFlyoutItem>
+            <MenuFlyoutItem
+                x:Name="CloseMenuFlyoutItem"
+                x:Uid="MenuFlyoutItem_Close"
+                Click="MenuFlyoutItem_Click">
+                <MenuFlyoutItem.Icon>
+                    <FontIcon Glyph="&#xE7E8;" />
+                </MenuFlyoutItem.Icon>
+            </MenuFlyoutItem>
+        </MenuFlyout>
+    </Page.ContextFlyout>
 </Page>
